--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -87,63 +87,6 @@
           </div>
         </div>
 
-        <!-- Box Esperienze lavorative -->
-        <div class="col g-4 linkedin-box p-0">
-          <div class="linkedin-box-content">
-            <!-- Prima riga -->
-            <div class="row row-cols-2 align-items-center mb-3">
-              <div><h5 class="d-inline">Esperienza</h5></div>
-              <div class="text-end">
-                <!-- Icona + -->
-                <button
-                  type="button "
-                  class="btn-icon"
-                  data-bs-toggle="modal"
-                  data-bs-target="#exampleModal"
-                >
-                  <i class="bi bi-plus-lg"></i>
-                </button>
-
-                <!-- Icona matita -->
-                <button
-                  type="button "
-                  class="btn-icon"
-                  data-bs-toggle="modal"
-                  data-bs-target="#exampleModal"
-                >
-                  <i class="bi bi-pencil"></i>
-                </button>
-              </div>
-            </div>
-            <!-- Inizio esperienze -->
-            <div>
-              <div class="row">
-                <!-- Immagine azienda -->
-                <div class="col-2 text-center">
-                  <img
-                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Valve-logo.jpg/1024px-Valve-logo.jpg"
-                    height="60px"
-                    width="60px"
-                  />
-                </div>
-                <!-- Descrizione -->
-                <div class="col-10">
-                  <p class="fw-bold m-0">Ruolo nell'azienda</p>
-                  <p class="fs-profile m-0">Nome dell'azienda - durata</p>
-                  <p class="fs-profile m-0">
-                    mese anno - mese anno - durata complessiva
-                  </p>
-                  <p class="fs-profile m-0">luogo</p>
-                  <p class="fs-profile">
-                    <span class="fw-bold">Competenze:</span>CSS HTML Jquery
-                    Javascript SQL
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
         <!-- Box di test -->
         <div class="col g-4 linkedin-box p-0">
           <div class="col g-4 linkedin-box-content"></div>
@@ -159,12 +102,12 @@
             <div class="d-flex justify-content-between">
               <p>lingua del profilo</p>
               <button
-                type="button "
-                class="btn-icon"
+                type="button"
+                class="btn"
                 data-bs-toggle="modal"
                 data-bs-target="#exampleModal"
               >
-                <i class="bi bi-pencil"></i>
+                <i class="bi bi-pencil ms-3"></i>
               </button>
 
               <!-- Modal -->
@@ -226,14 +169,7 @@
           <div class="linkedin-box-content">
             <div class="d-flex justify-content-between">
               <p>Public profile & URl</p>
-              <button
-                type="button "
-                class="btn-icon"
-                data-bs-toggle="modal"
-                data-bs-target="#exampleModal"
-              >
-                <i class="bi bi-pencil"></i>
-              </button>
+              <a href="" class="unstyle"> <i class="bi bi-pencil ms-3"></i></a>
             </div>
             <p class="text">link non apribile</p>
           </div>
