--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -179,10 +179,61 @@
         </div>
         <div class="col g-4 linkedin-box">
           <div class="linkedin-box-content">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam
-            recusandae quia esse impedit ratione ad. Eligendi, quod modi
-            suscipit quaerat architecto amet praesentium cum voluptate nulla
-            deleniti tempora est voluptates!
+            <p class="text-end">
+              annuncio
+              <button
+                type="button"
+                class="btn p-0"
+                data-bs-toggle="modal"
+                data-bs-target="#exampleModal2"
+              >
+                ∙∙∙
+              </button>
+            </p>
+            <!-- Button trigger modal -->
+
+            <!-- Modal -->
+            <div
+              class="modal fade"
+              id="exampleModal2"
+              tabindex="-1"
+              aria-labelledby="exampleModalLabel2"
+              aria-hidden="true"
+            >
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel2">
+                      Opzioni annuncio
+                    </h1>
+                    <button
+                      type="button"
+                      class="btn-close"
+                      data-bs-dismiss="modal"
+                      aria-label="Close"
+                    ></button>
+                  </div>
+                  <div class="modal-body annucioPopUP">
+                    <div class="d-flex">
+                      <i class="bi bi-info-square-fill me-1"></i>
+                      <div class="user-select-none">
+                        <p class="bold m-0">perchè vedo questo annuncio?</p>
+                        <p>
+                          gestisci le preferenze per gli annunci pubblicitari
+                        </p>
+                      </div>
+                    </div>
+                    <div class="d-flex">
+                      <i class="bi bi-flag-fill me-1"></i>
+                      <div>
+                        <p class="bold m-0">segnala questo annuncio</p>
+                        <p>non voglio vedere questo annucio nel mio feed</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <div class="col g-4 linkedin-box">
