--- a/src/app/pages/profile/profile.component.scss
+++ b/src/app/pages/profile/profile.component.scss
@@ -68,3 +68,12 @@ $amount: 45;
 .annucioPopUP {
   cursor: pointer;
 }
+.addPann {
+  font-size: 0.7em;
+}
+.profileAddsImg {
+  width: 50px;
+}
+.spanEpicodeAdd {
+  color: black;
+}
