--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -251,7 +251,9 @@
             <span class="spanEpicodeAdd">epicode</span>
           </p>
           <div class="d-flex justify-content-center">
-            <button class="btn btn-blue mb-3">segui</button>
+            <a href="https://www.linkedin.com/school/epicodeitalia/">
+              <button class="btn btn-blue mb-3">segui</button></a
+            >
           </div>
         </div>
         <div class="col g-4 linkedin-box">
