--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -6,7 +6,7 @@
 {{ profileData?.area }}
 {{ profileData?.username }} -->
 
-<div class="container">
+<div class="container mt-5">
   <div class="row justify-content-around">
     <!-- colonna centrale -->
     <div class="col col-12 col-md-8">
