--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -145,7 +145,10 @@
   </div>
 </nav>
 
-<div [ngClass]="scrolled ? 'visible-div' : 'hidden-div'" class="container">
+<div
+  [ngClass]="scrolled ? 'visible-div' : 'hidden-div'"
+  class="container d-none d-md-flex"
+>
   <div class="d-flex justify-content-around w-100 pt-2" id="scroll">
     <div class="d-flex">
       <i class="bi bi-person-circle text-primary fs-2"></i>
