--- a/src/app/pages/profile/profile.component.scss
+++ b/src/app/pages/profile/profile.component.scss
@@ -56,9 +56,13 @@ $amount: 45;
   font-size: 1em;
   margin-right: 10px;
 }
-.bold {
+
+
+.bold
+{
   font-weight: bold;
 }
+
 .iconProfile {
   height: 60px;
 }
