--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -111,10 +111,43 @@
     </div>
   </div>
 </div>
-<div class="container">
-  <div class="row">
-    <div class="col col-12">
+<div class="container-fluid">
+  <div class="row justify-content-between">
+    <div class="col col-4">
       <p class="fw-lighter fs-6">LinkedIn Corporation &copy; 2023</p>
+    </div>
+
+    <!-- Messaggistica -->
+    <div class="col col-4">
+      <button
+        class="btn btn-light"
+        type="button"
+        data-bs-toggle="offcanvas"
+        data-bs-target="#offcanvasBottom"
+        aria-controls="offcanvasBottom"
+      >
+        Messaggistica
+      </button>
+
+      <div
+        class="offcanvas offcanvas-bottom"
+        tabindex="-1"
+        id="offcanvasBottom"
+        aria-labelledby="offcanvasBottomLabel"
+      >
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasBottomLabel">
+            Messaggistica
+          </h5>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="offcanvas"
+            aria-label="Close"
+          ></button>
+        </div>
+        <div class="offcanvas-body small">...</div>
+      </div>
     </div>
   </div>
 </div>
