modal for new expirence

--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -99,7 +99,7 @@
                   type="button "
                   class="btn-icon"
                   data-bs-toggle="modal"
-                  data-bs-target="#exampleModal"
+                  data-bs-target="#exampleModal3"
                 >
                   <i class="bi bi-plus-lg"></i>
                 </button>
@@ -289,6 +289,79 @@
               </div>
             </div>
           </div>
+
+          <!-- Modal -->
+          <div
+            class="modal fade"
+            id="exampleModal3"
+            tabindex="-1"
+            aria-labelledby="exampleModalLabel2"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="exampleModalLabel2">
+                    Aggiungi esperienze
+                  </h1>
+                  <button
+                    type="button"
+                    class="btn-close"
+                    data-bs-dismiss="modal"
+                    aria-label="Close"
+                  ></button>
+                </div>
+                <div class="modal-body annucioPopUP">
+                  <!-- form del modale -->
+                  <form>
+                    <div class="mb-3">
+                      <label class="form-label">Qualifica</label>
+                      <input type="text" class="form-control" />
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label">Tipo di impiego</label>
+                      <input type="text" class="form-control" />
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label">Nome azienda</label>
+                      <input type="text" class="form-control" />
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label">Località</label>
+                      <input type="text" class="form-control" />
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label">Tipo di località</label>
+                      <input type="text" class="form-control" />
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label">data di inizio</label>
+                      <input type="date" class="form-control" />
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label">data di fine</label>
+                      <input type="date" class="form-control" />
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label">settore</label>
+                      <input type="Text" class="form-control" />
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label">descrizione</label>
+                      <input type="text-area" class="form-control" />
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label">Sommario del profilo</label>
+                      <input type="textarea" class="form-control" />
+                    </div>
+
+                    <button type="submit" class="btn btn-primary">Salva</button>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <p class="addPann text text-center m-1">
             scorpi la formazione presso epicode
           </p>
