--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -113,14 +113,14 @@
 </div>
 <div class="container-fluid">
   <div class="row justify-content-between">
-    <div class="col col-4">
+    <div class="col col-6">
       <p class="fw-lighter fs-6">LinkedIn Corporation &copy; 2023</p>
     </div>
 
     <!-- Messaggistica -->
-    <div class="col col-4">
+    <div class="col col-4 p-0 flex-grow-1" id="messaggistica">
       <button
-        class="btn btn-light"
+        class="btn btn-light w-100 h-100 p-0"
         type="button"
         data-bs-toggle="offcanvas"
         data-bs-target="#offcanvasBottom"
