--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -11,3 +11,13 @@ a {
  p{
    font-size: small;
  }
+
+ #messaggistica{
+  display:none;
+ }
+ @media (min-width:768px){
+#messaggistica{
+  display:block;
+  max-width: 300px;
+}
+}
