--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -120,13 +120,21 @@
     <!-- Messaggistica -->
     <div class="col col-4 p-0 flex-grow-1" id="messaggistica">
       <button
-        class="btn btn-light w-100 h-100 p-0"
+        class="btn btn-light w-100 h-100 p-0 d-flex justify-content-between align-items-center"
         type="button"
         data-bs-toggle="offcanvas"
         data-bs-target="#offcanvasBottom"
         aria-controls="offcanvasBottom"
       >
-        Messaggistica
+        <div class="d-flex align-items-center">
+          <i class="bi bi-person-circle fs-3 p-2"></i>
+          <p class="fw-semibold fs-6 m-0">Messaggistica</p>
+        </div>
+        <div>
+          <i class="bi bi-three-dots"></i>
+          <i class="bi bi-pencil-square"></i>
+          <i class="bi bi-caret-up"></i>
+        </div>
       </button>
 
       <div
