--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -105,9 +105,11 @@
                 </button>
 
                 <!-- Icona matita -->
-                <a routerLink="esperienze" class="btn-icon aPencil">
-                  <i class="bi bi-pencil"></i
-                ></a>
+                <button type="button " class="btn-icon" data-bs-toggle="modal">
+                  <a routerLink="esperienze">
+                    <i class="bi bi-pencil text-secondary"></i
+                  ></a>
+                </button>
               </div>
             </div>
             <!-- Inizio esperienze -->
