--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -95,7 +95,7 @@
                 </div>
                 <button
                   type="button"
-                  class="btn btn-outline-primary align-items-center w-75 mx-auto"
+                  class="btn btn-blue align-items-center w-75 mx-auto"
                 >
                   Visualizza profilo
                 </button>
