--- a/src/app/pages/esperienze/esperienze.component.html
+++ b/src/app/pages/esperienze/esperienze.component.html
@@ -1,5 +1,5 @@
-<div class="container mt-5">
-  <div class="row justify-content-around">
+<div class="m">
+  <div class="row ms-2 b">
     <div *ngFor="let experience of experienceData" class="col-8">
       <div class="row">
         <!-- Immagine azienda -->
