--- a/src/app/pages/esperienze/esperienze.component.html
+++ b/src/app/pages/esperienze/esperienze.component.html
@@ -11,7 +11,7 @@
           />
         </div>
         <!-- Descrizione -->
-        <div class="col-10">
+        <div class="col-9">
           <p class="fw-bold m-0">{{ experience.role }}</p>
           <p class="fs-profile m-0">{{ experience.company }}</p>
           <p class="fs-profile m-0">
@@ -24,7 +24,9 @@
             SQL
           </p>
         </div>
+        <i class="bi bi-pencil text-secondary col-1"> </i>
       </div>
     </div>
+    <app-profili class="col-4"></app-profili>
   </div>
 </div>
